// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gh-helper buildIssueBody should return built issue body 1`] = `
"

<!-- Created using wei/new-issue -->"
`;

exports[`gh-helper buildIssueBody should return built issue body 2`] = `
"label 1
value 1



<!-- Created using wei/new-issue -->"
`;

exports[`gh-helper buildIssueBody should return built issue body 3`] = `
"label 1
value 1

label 2
value 2



<!-- Created using wei/new-issue -->"
`;

exports[`gh-helper buildIssueBody should return built issue body 4`] = `
"label 1


label 2


label 3
value 3



<!-- Created using wei/new-issue -->"
`;

exports[`gh-helper buildIssueBody should return built issue body 5`] = `
"label 1


label 2
value 2



<!-- Created using wei/new-issue -->"
`;

exports[`gh-helper buildIssueBody should return built issue body 6`] = `
"label 1


label 2
value 2



<!-- Created using wei/new-issue -->"
`;

exports[`gh-helper buildIssueBody should return built issue body 7`] = `
"value 1

label 2
value 2



<!-- Created using wei/new-issue -->"
`;

exports[`gh-helper buildIssueBody should return built issue body 8`] = `
"value 1

label 2
value 2



<!-- Created using wei/new-issue -->"
`;

exports[`gh-helper buildIssueTitle should return built issue title 1`] = `"value 1"`;

exports[`gh-helper buildIssueTitle should return built issue title 2`] = `"value 1value 2"`;
